# locus-tag

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  Makefile  README.md  SUMMARY_OF_CHANGES.md  _typos.toml  baseline.json  clippy_output.json  deny.toml  justfile  mkdocs.yml  patch_decoder.py  patch_tests.py  pyproject.toml  release.toml  rustfmt.toml  versions.json
.agent/: rules
0.6/: 404.html  (+3 more)
crates/locus-core/: Cargo.toml  README.md  build.rs  debug_noise_fail.pgm  debug_scene_0.pgm  debug_scene_1.pgm
crates/locus-core/benches/: adaptive_routing_bench.rs  board_bench.rs  comprehensive.rs  decoding_bench.rs  decoding_real_bench.rs  detect_bench.rs  dictionary_bench.rs  edge_refinement.rs  hub_bench.rs  integral_threshold_bench.rs  lib.rs  minimal_bench.rs  pose_bench.rs  pose_covariance_bench.rs  quad_bench.rs  real_data_bench.rs  rescue_pipeline_bench.rs  roi_upscale_bench.rs  segmentation_bench.rs  soft_decoding_bench.rs  sota_threshold_bench.rs  threshold_bench.rs
crates/locus-core/benches/utils/: mod.rs
crates/locus-core/data/dictionaries/: dict_4x4_100.json  dict_4x4_50.json  dict_5x5_100.json  dict_5x5_50.json  dict_6x6_100.json  dict_6x6_250.json  dict_6x6_50.json  dict_7x7_100.json  dict_7x7_50.json  dict_apriltag_16h5.json  dict_apriltag_36h11.json
crates/locus-core/profiles/: README.md  general.json  grid.json  high_accuracy.json  max_recall_adaptive.json  render_tag_hub.json  standard.json
crates/locus-core/proptest-regressions/: api.txt  camera_geometry.txt  concurrency.txt  decoder.txt  geometry.txt  image.txt  memory.txt  pipeline.txt  quad_rotation.txt  threshold.txt
crates/locus-core/proptest-regressions/archive/: decoder.txt  gradient.txt  threshold.txt
crates/locus-core/proptest-regressions/simd_ccl_fusion/: simd_scanline.txt
crates/locus-core/src/: batch.rs  board.rs  camera.rs  charuco.rs  config.rs  decoder.rs  detector.rs  dictionaries.rs  edge_refinement.rs  edlines.rs  error.rs  filter.rs  funnel.rs  gradient.rs  gwlf.rs  homography.rs  image.rs  lib.rs  model_edge.rs  pose.rs  pose_weighted.rs  post_decode_refinement.rs  quad.rs  refinement.rs  s3_anchor_walk.rs  segmentation.rs  strategy.rs  test_utils.rs  threshold.rs  workspace.rs
crates/locus-core/src/simd/: math.rs  mod.rs  roi.rs  sampler.rs
crates/locus-core/src/simd_ccl_fusion/: mod.rs  simd_scanline.rs
crates/locus-core/src/test_utils/: mod.rs  scene.rs  subpixel.rs
crates/locus-core/templates/: dictionaries.rs.j2
crates/locus-core/tests/: accuracy_tests.rs  allocation_bounded_alloc_adaptive_rescue.rs  allocation_zero_alloc_static.rs  audit_model_edge_covariance.rs  config_tests.rs  contract_decode_hot_loop_zero_alloc.rs  contract_detection_batch.rs  diagnose_render_tag_2160p.rs  diff_adaptive.rs  gwlf_tests.rs  homography_robustness.proptest-regressions  homography_robustness.rs  icra2020_regression.rs  icra_forward_diagnostic.rs  integration_aruco.rs  integration_charuco.rs  integration_complex.rs  integration_detection.rs  negative_detection.rs  profile_loading.rs  profile_unknown_field.rs  refinement_tests.rs  regression_board_hub.rs  regression_distortion_hub.rs  regression_icra2020.rs  regression_negative_dataset.rs  regression_pose_consistency_roc.rs  regression_ppb_sweep.rs  regression_render_tag.rs  regression_render_tag_robustness.rs  regression_straight_space.rs  repro_failure.rs  repro_failure_icra.rs  robustness_stride.rs  robustness_testing.proptest-regressions  robustness_testing.rs  segmentation_parallel_test.rs  smoke_icra.rs  snapshot_dictionaries.rs  test_dda.rs  (+16 more)
crates/locus-core/tests/common/: hub.rs  mod.rs  telemetry.rs
crates/locus-core/tests/fixtures/: icra_grid.json  icra_synthetic_aggressive.json  icra_synthetic_min_area.json  icra_synthetic_soft.json  icra_synthetic_tile_size.json
crates/locus-core/tests/robustness/: api.rs  camera_geometry.rs  concurrency.rs  decoder.rs  decoder_rotation.rs  geometry.rs  homography_roundtrip.rs  memory.rs  pipeline.rs  quad_rotation.rs  threshold.rs
crates/locus-core/tests/schemas/: dictionary.schema.json
crates/locus-core/tests/snapshots/: regression_board_hub__board_aprilgrid_v1_golden.snap  regression_board_hub__board_aprilgrid_v1_golden_forstner.snap  regression_board_hub__board_aprilgrid_v1_golden_high_accuracy.snap  regression_board_hub__board_charuco_v1_golden.snap  regression_board_hub__board_charuco_v1_golden_forstner.snap  regression_board_hub__board_charuco_v1_golden_high_accuracy.snap  regression_board_hub__board_charuco_v1_golden_plain.snap  regression_board_hub__board_charuco_v1_golden_plain.snap.new  regression_board_hub__board_charuco_v1_golden_sota.snap  regression_board_hub__board_charuco_v1_golden_sota.snap.new  regression_board_hub__tests__charuco_refiner_v1_golden.snap  regression_icra2020__fixtures.snap  regression_icra2020__fixtures.snap.new  regression_icra2020__fixtures_edlines_moments.snap  regression_icra2020__fixtures_moments_culling.snap  regression_icra2020__fixtures_sota.snap  regression_icra2020__fixtures_sota_checkerboard.snap  regression_icra2020__fixtures_sota_pure_tags.snap  regression_icra2020__hub_single_tag_locus_v1_std41h12.snap  regression_icra2020__hub_single_tag_locus_v1_tag16h5.snap  regression_icra2020__hub_single_tag_locus_v1_tag36h11.snap  regression_icra2020__icra2020_circle_checkerboard.snap  regression_icra2020__icra2020_circle_standard.snap  regression_icra2020__icra2020_forward_checkerboard.snap  regression_icra2020__icra2020_forward_standard.snap  regression_icra2020__icra2020_random_checkerboard.snap  regression_icra2020__icra2020_random_standard.snap  regression_icra2020__icra2020_rotation_checkerboard.snap  regression_icra2020__icra2020_rotation_standard.snap  regression_icra2020__icra_circle_checkerboard_corners_images.snap  (+73 more)
crates/locus-py/: Cargo.toml
crates/locus-py/locus/: __init__.py  _config.py  _profile.py  locus.pyi
crates/locus-py/src/: lib.rs
crates/locus-py/tests/: test_ffi_contracts.py  test_ffi_enum_strictness.py  test_json_roundtrip.py  test_profile_values.py  test_profiles.py
(+698 files in other folders)
