[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "locus-tag"
version = "0.2.3"
description = "A high-performance fiducial marker detector for robotics."
readme = "README.md"
authors = [{name = "Noé Fontana"}]
requires-python = ">=3.10"
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
    "Programming Language :: Rust",
]
dependencies = ["numpy>=2.0", "pydantic>=2.0"]
 
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "locus"
python-source = "crates/locus-py"
manifest-path = "crates/locus-py/Cargo.toml"
include = ["data/**/*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM", "I"] # Pyflakes, pycodestyle, bugbear, pyupgrade, simplify, isort
ignore = ["E501", "B006", "B008"] # Line length handled by formatter

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "datasets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rerun.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pupil_apriltags.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "maturin>=1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "typer>=0.12.0",
    "jsonschema>=4.0.0",
]
lint = [
    "ruff>=0.14.14",
]
types = [
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "types-tqdm>=4.0.0",
    "types-jsonschema",
    "types-requests",
    "types-PyYAML",
    "types-setuptools",
]
bench = [
    "opencv-python-headless>=4.0.0",
    "rerun-sdk>=0.9.0",
    "matplotlib>=3.0.0",
    "datasets[vision]",
    "pupil-apriltags",
    "typer>=0.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
etl = [
    "huggingface-hub>=0.19.0",
    "tqdm>=4.66.0",
]
