[package]
name = "locus-core"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A high-performance fiducial marker detector for robotics."
build = "build.rs"
# No lints here

[build-dependencies]
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
nalgebra = "0.33"
rayon = "1.10"
bumpalo = { version = "3.16", features = ["collections"] }
multiversion = "0.7"
tracing = "0.1"
tracing-tracy = { version = "0.11", optional = true }
rerun = { version = "0.20", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
divan = "0.1"
proptest = "1.6"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
csv = "1.3"
walkdir = "2.5.0"
insta = { version = "1.41", features = ["yaml", "redactions"] }
tracing-subscriber = "0.3"

[[bench]]
name = "threshold_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "integral_threshold_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "dictionary_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "decoding_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "soft_decoding_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "segmentation_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "comprehensive"
harness = false
required-features = ["extended-bench", "bench-internals"]

[[bench]]
name = "pose_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "real_data_bench"
harness = false
required-features = ["bench-internals"]

[features]
default = []
tracy = ["dep:tracing-tracy"]
viz = ["dep:rerun"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
extended-tests = []
extended-bench = []
bench-internals = []

[lints]
workspace = true
