[package]
name = "locus-core"
version = "0.2.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A high-performance fiducial marker detector for robotics."
include = ["src/**/*", "build.rs", "data/dictionaries/**/*", "templates/**/*"]
build = "build.rs"
# No lints here

[build-dependencies]
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
nalgebra = "0.34"
rayon = "1.11"
bumpalo = { version = "3.20", features = ["collections"] }
multiversion = "0.7"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-tracy = { version = "0.11", optional = true }
rerun = { version = "0.20", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
rand = "0.10"
rand_distr = "0.6"

[dev-dependencies]
divan = "0.1"
proptest = "1.6"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
libm = "0.2"
csv = "1.3"
walkdir = "2.5.0"
insta = { version = "1.41", features = ["yaml", "redactions"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

[[bench]]
name = "threshold_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "integral_threshold_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "dictionary_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "decoding_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "soft_decoding_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "segmentation_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "comprehensive"
harness = false
required-features = ["extended-bench", "bench-internals"]

[[bench]]
name = "pose_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "real_data_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "hub_bench"
harness = false
required-features = ["bench-internals"]

[[test]]
name = "regression_icra2020"
harness = true
required-features = ["bench-internals"]

[[test]]
name = "robustness_pipeline"
path = "tests/robustness/pipeline.rs"

[[test]]
name = "robustness_threshold"
path = "tests/robustness/threshold.rs"

[[test]]
name = "robustness_geometry"
path = "tests/robustness/geometry.rs"

[[test]]
name = "robustness_decoder"
path = "tests/robustness/decoder.rs"

[[test]]
name = "robustness_concurrency"
path = "tests/robustness/concurrency.rs"

[[test]]
name = "robustness_memory"
path = "tests/robustness/memory.rs"

[[test]]
name = "robustness_api"
path = "tests/robustness/api.rs"

[features]
default = []
tracy = ["dep:tracing-tracy"]
viz = ["dep:rerun"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
extended-tests = []
extended-bench = []
bench-internals = []

[lints]
workspace = true
