[package]
name = "locus-core"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A high-performance fiducial marker detector for robotics."
readme = "README.md"
include = ["src/**/*", "build.rs", "data/dictionaries/**/*", "templates/**/*", "README.md"]
build = "build.rs"
# No lints here

[build-dependencies]
askama = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
rayon = "1.11"
bumpalo = { version = "3.20", features = ["collections"] }
multiversion = "0.8"
thiserror = "2.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-tracy = { version = "0.11", optional = true }
rerun = { version = "0.20", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
crossbeam-queue = "0.3"
rand = { version = "0.10", optional = true }
rand_distr = { version = "0.6", optional = true }

[dev-dependencies]
divan = "0.1"
proptest = "1.11"
rand = "0.10"
rand_distr = "0.6"
rand_chacha = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
libm = "0.2"
csv = "1.3"
walkdir = "2.5.0"
insta = { version = "1.47", features = ["yaml", "redactions"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

[[bench]]
name = "threshold_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "integral_threshold_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "dictionary_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "decoding_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "soft_decoding_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "segmentation_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "comprehensive"
harness = false
required-features = ["extended-bench", "bench-internals"]

[[bench]]
name = "pose_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "pose_covariance_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "real_data_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "decoding_real_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "hub_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "board_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "edge_refinement"
harness = false
required-features = ["bench-internals"]

[[test]]
name = "regression_icra2020"
harness = true
required-features = ["bench-internals"]

[[test]]
name = "regression_board_hub"
path = "tests/regression_board_hub.rs"
required-features = ["bench-internals"]

[[test]]
name = "gwlf_tests"
path = "tests/gwlf_tests.rs"
required-features = ["bench-internals"]

[[test]]
name = "integration_aruco"
path = "tests/integration_aruco.rs"
required-features = ["bench-internals"]

[[test]]
name = "integration_detection"
path = "tests/integration_detection.rs"
required-features = ["bench-internals"]

[[test]]
name = "snapshot_dictionaries"
path = "tests/snapshot_dictionaries.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_dda"
path = "tests/test_dda.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_decoding_soa"
path = "tests/test_decoding_soa.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_decimation"
path = "tests/test_decimation.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_detection_batch"
path = "tests/test_detection_batch.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_funnel_gate"
path = "tests/test_funnel_gate.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_homography_soa"
path = "tests/test_homography_soa.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_partition_soa"
path = "tests/test_partition_soa.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_pose_soa"
path = "tests/test_pose_soa.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_quad_soa"
path = "tests/test_quad_soa.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_reassemble_soa"
path = "tests/test_reassemble_soa.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_telemetry"
path = "tests/test_telemetry.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_vectorized_sampler"
path = "tests/test_vectorized_sampler.rs"
required-features = ["bench-internals"]

[[test]]
name = "test_detector_facade"
path = "tests/test_detector_facade.rs"
required-features = ["bench-internals"]

[[test]]
name = "contract_detection_batch"
path = "tests/contract_detection_batch.rs"
required-features = ["bench-internals"]

[[test]]
name = "negative_detection"
path = "tests/negative_detection.rs"
required-features = ["bench-internals"]

[[test]]
name = "robustness_quad_rotation"
path = "tests/robustness/quad_rotation.rs"
required-features = ["bench-internals"]

[[test]]
name = "robustness_homography_roundtrip"
path = "tests/robustness/homography_roundtrip.rs"
required-features = ["bench-internals"]

[[test]]
name = "robustness_decoder_rotation"
path = "tests/robustness/decoder_rotation.rs"
required-features = ["bench-internals"]

[[test]]
name = "robustness_pipeline"
path = "tests/robustness/pipeline.rs"

[[test]]
name = "robustness_threshold"
path = "tests/robustness/threshold.rs"

[[test]]
name = "robustness_geometry"
path = "tests/robustness/geometry.rs"
required-features = ["bench-internals"]

[[test]]
name = "robustness_decoder"
path = "tests/robustness/decoder.rs"
required-features = ["bench-internals"]

[[test]]
name = "robustness_concurrency"
path = "tests/robustness/concurrency.rs"

[[test]]
name = "robustness_memory"
path = "tests/robustness/memory.rs"

[[test]]
name = "robustness_api"
path = "tests/robustness/api.rs"

[[test]]
name = "robustness_camera_geometry"
path = "tests/robustness/camera_geometry.rs"
required-features = ["non_rectified"]

[[test]]
name = "regression_straight_space"
path = "tests/regression_straight_space.rs"
required-features = ["non_rectified", "bench-internals"]

[features]
default = []
tracy = ["dep:tracing-tracy"]
viz = ["dep:rerun"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
extended-tests = []
extended-bench = []
bench-internals = ["dep:rand", "dep:rand_distr"]
non_rectified = []

[lints]
workspace = true
