[package]
name = "locus-py"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "locus"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
numpy = "0.28"
locus-core = { path = "../locus-core" }
bumpalo = "3.20"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-tracy = { version = "0.11", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"], optional = true }
nalgebra = { version = "0.34", default-features = false, features = ["std"] }

[features]
default = ["profiles"]
profiles = ["locus-core/profiles"]
tracy = ["locus-core/tracy", "dep:tracing-tracy", "dep:tracing-subscriber"]
non_rectified = ["locus-core/non_rectified"]
# Phase 0 rotation-tail diagnostic harness. Exposes the `locus.bench` Python
# sub-module: dual-branch LM, leave-one-out refit, image noise floor, and
# per-iteration IRLS telemetry. Throwaway: revert before shipping.
bench-internals = ["locus-core/bench-internals"]
[lints]
workspace = true
